--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                     <option value="10">10: シンシア</option>
                     <option value="11">11: リテラール</option>
                     <option value="12">12: オーセクト</option>
+                    <option value="13">13: ヴァルヴァイレ</option>
                 </select>
             </div>
         </div>
