--- a/index.html
+++ b/index.html
@@ -520,7 +520,7 @@
             magicDisp.style.display = 'none';
         }
 
-        const baseCommand = "1d6+{速度}/6 【速度値ロール】";
+        const baseCommand = "";
         const skillCommands = SELECTED_SKILLS.map(s => {
             let cmd = s.command;
             if (s.customName) {
