--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@
                 <div class="param-box">
                     <label>出身 (Origin)</label>
                     <select id="char-origin" onchange="calculateStats()">
+                        <option value="0">0: 出身なし</option>
                         <option value="1">1: ヨキューク・ツォー</option>
                         <option value="2">2: アーク・ジェムリア</option>
                         <option value="3">3: ラティウム</option>
